--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -4,5 +4,5 @@ repositories {
 } 
 
  dependencies {
-     implementation 'com.itextpdf:itext7-core:7.0.4'
+     implementation 'com.itextpdf:itextpdf:5.5.13.1'
  }
