--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -1,8 +1,4 @@
-  
-repositories {
-    mavenCentral()
-} 
 
- dependencies {
-     implementation 'com.itextpdf:itextpdf:5.5.13.1'
- }
+dependencies {
+    provided files('lib/itext5-itextpdf-5.5.13.1.jar')
+}
